# curator

./: .dockerignore  .gitignore  .tmuxinator.yml  Cargo.toml  Dockerfile  Makefile  README.md  TODO  a.discovery.sh  docker-compose.yml  run-agent.sh
.github/workflows/: main.yml
curator-frontend/: Dockerfile  package-lock.json  package.json
curator-frontend/src/: components.test.tsx  components.tsx
curator-frontend/src/stories/: ui.stories.js
docs/: Task-Lifecycle.md
examples/: docker-discovery.rs  docker-download.rs  docker-events.rs  docker.rs  errors.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/.storybook/: main.js
frontend/docker/: nginx-frontend.conf  nginx-router.conf  nginx.conf
frontend/public/: index.html  manifest.json
frontend/src/: App.module.css  App.test.tsx  App.tsx  ExecutionList.tsx  components.tsx  index.scss  index.tsx  layout.module.css  models.ts
frontend/src/components/: index.tsx
frontend/src/stories/: Execution.stories.js  agents.json  executions.json  fixture.ts  ui.stories.js
local/: docker-compose.yml  lsof.discovery.sh  systemctl.discovery.sh  virsh.discovery.sh
reference/: REST-API.v1.yaml
requests/: Makefile  new-agent.json  run-task-date.json  run-task-uptime.json  run-task-w.json
src/: agent-main.rs  agent.rs  client.rs  curator-client.rs  docker.rs  lib.rs  main.rs  protocol.rs  server-main.rs  server.rs  sse.rs
tests/: curator_sse_test.rs  docker.rs
toolchains/example/: Dockerfile  README.md  discover  discovery  task-lsof
toolchains/jdk/: Dockerfile  discover  jfr  jmap-dump
toolchains/jdk/test-app/: Dockerfile  Main.java  Makefile  README.md
