[package]
name = "curator"
version = "0.1.0"
authors = ["Denis Bazhenov <dotsid@gmail.com>"]
edition = "2018"

[lib]
name = "curator"
path = "src/lib.rs"

[[bin]]
name = "curator-server"
path = "src/server-main.rs"

[[bin]]
name = "curator-agent"
path = "src/agent-main.rs"

[dependencies]
actix-server = "1.0"
actix-files = "0.5"
actix-web = "3"
futures = "0.3.12"
tokio = { version = "1.2.0", features = ["rt", "macros", "io-util", "process", "time"] }
tokio-util = { version = "0.6.3", features = ["codec", "io"] }
tokio-stream = { version = "0.1.4", features = ["sync"] }
bytes = "0.5"
hyper = { version = "0.14.4", features = ["tcp", "client", "http1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
chrono = { version = "0.4.11", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
termion = "1.5.5"
anyhow = "1.0.0"
thiserror = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
clap = "2.33.0"
ctrlc = { version = "3.1.4", features = ["termination"] }
bollard = "0.10"
log-derive = "0.4.1"
flate2 = "1.0.20"

[dev-dependencies]
tempfile = "3.1.0"
maplit = "1.0.2"
rstest = "0.6.4"
tar = "0.4.33"
termion = "1.5.6"
actix-rt = "1.1.0"
